fixed safari compatability with backface visibility hidden

--- a/css/style.css
+++ b/css/style.css
@@ -35,44 +35,53 @@ h1 {
 	position: relative;
 	transition: -webkit-transform 1s ease-in;
 	-webkit-transform-style: preserve-3d;
+	transform-style: preserve-3d;
 }
 
 #coin_container img {
 	width: 300px;
 	position: absolute;
+	-webkit-backface-visibility: hidden;
 }
 
 /* rotate the tails coin image so it is back to back with the heads image */
 .coin_tails {
   	-webkit-transform: rotateY(-180deg);
+  	transform: rotateY(-180deg);
 }
 
 /* the coin container is rotating when class flipHeads or flipTails is added */
 #coin_container.flipHeads {
 	-webkit-animation: flipHeads 3s ease-out forwards;
+	animation: flipHeads 3s ease-out forwards;
 }
 
 #coin_container.flipTails {
 	-webkit-animation: flipTails 3s ease-out forwards;
+	animation: flipTails 3s ease-out forwards;
 }
 
 /* Rotate the coin 10 times if heads */
 @keyframes flipHeads {
-	from {
+	0% {
 		-webkit-transform: rotateY(0);
+		transform: rotateY(0);
 	}
-	to {
+	100% {
 		-webkit-transform: rotateY(1800deg);
+		transform: rotateY(1800deg);
 	}
 }
 
 /* Rotate the coin 11 times if tails */
 @keyframes flipTails {
-	from {
+	0% {
 		-webkit-transform: rotateY(0);
+		transform: rotateY(0);
 	}
-	to {
+	100% {
 		-webkit-transform: rotateY(1980deg);
+		transform: rotateY(1980deg);
 	}
 }
 
